modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-cluster-roles/rendered/test_samples/other/002-negative.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
    name: negative
    namespace: default
roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: ClusterRole
    name: cluster-admin
subjects:
    - kind: ServiceAccount
      name: default
      namespace: default
