modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-cluster-roles/rendered/test_samples/other/003-absent.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
    name: absent
    namespace: default
roleRef:
    apiGroup: rbac.authorization.k8s.io
    kind: Role
    name: some-role
subjects:
    - kind: ServiceAccount
      name: default
      namespace: default
