modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-cluster-roles/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: allowed-cluster-roles
tests:
  - name: policy_1
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: positive
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/other/001-positive.yaml
        assertions:
          - violations: "no"
      - name: negative
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/other/002-negative.yaml
        assertions:
          - violations: "yes"
      - name: absent
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/other/003-absent.yaml
        assertions:
          - violations: "no"
